package org.laykon.model;

public class FieldModel {
    public final String name;
    public final String type;

    public FieldModel(String name, String type) {
        this.name = name;
        this.type = type;
    }
}
